02 version du CV

--- a/index.html
+++ b/index.html
@@ -4,45 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>My-Cv</title>
   </head>
   <header>
-    <div class="main-container">
-      <div class="container-name">
-        <div class="nav-name">Lucas Maroy</div>
+    <div class="shadow_header"></div>
+    <div class="header-container">
+      <div class="header-sub-container">
+        <!-- <div class="container-name">
+          <div class="nav-name">Lucas Maroy</div>
+        </div> -->
+        <div class="container-nav">
+          <div class="nav-about">&ltAbout Me</div>
+          <div class="nav-education">&ltEducation</div>
+          <div class="nav-experience">&ltExperience</div>
+          <div class="nav-skills">&ltSkills</div>
+          <div class="nav-speak">&ltLunguages</div>
+        </div>
       </div>
-      <div class="container-nav">
-        <div class="nav-about">About Me</div>
-        <div class="nav-education">Education</div>
-        <div class="nav-experience">Experience</div>
-        <div class="nav-skills">Skills</div>
-        <div class="nav-speak">Lunguages</div>
-      </div>
-    </div>
+  </div>
   </header>
   <body>
+    <div class="img_background_about"><img src="asset/PP_LucasMaroy_bef_nb copie 2.jp" alt=""></div>  <body>
     <div class="body-container">
       <div class="body-sub-container">
-        <div class="about">
-          <img src="asset/PP_LucasMaroy_bef_nb copie 2.jpg"OneDrive -
-          heaj.be"\Images\Auto-Portrait" alt="PP-LucasMaroy" width="500px">
-          <div class="textabout">
-            <h1>Lucas Maroy</h1>
-            <h2>About Me</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
-              placeat consequuntur, voluptatem reprehenderit libero debitis,
-              porro optio blanditiis iusto laboriosam, nemo dolore illum nam?
-              Odio voluptatum commodi nostrum possimus eum. Sint nihil nam sed
-              ab vero. Officia corporis repellat labore necessitatibus, libero
-              aperiam deleniti, blanditiis, temporibus cupiditate tempora
-              numquam dolores sunt aliquam aut. Praesentium totam aut repellat,
-              inventore earum asperiores. Cum, eum! Expedita praesentium,
-              aliquid aliquam quos voluptate velit doloribus provident voluptas,
-              perferendis ea veniam.
-            </p>
+        <div class="about_container">
+          <h1>Lucas Maroy</h1>
+        <div class="about_contenue">
+            <!-- <img src="asset/PP_LucasMaroy_bef_nb copie 2.jpg"OneDrive -heaj.be"\Images\Auto-Portrait" alt="PP-LucasMaroy" width="500px"> -->
+            <div class="textabout">
+              <h2>About Me</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+                placeat consequuntur, voluptatem reprehenderit libero debitis,
+                porro optio blanditiis iusto laboriosam, nemo dolore illum nam?
+                Odio voluptatum commodi nostrum possimus eum. Sint nihil nam sed
+                ab vero. Officia corporis repellat labore necessitatibus, libero
+                aperiam deleniti, blanditiis, temporibus cupiditate tempora
+                numquam dolores sunt aliquam aut. Praesentium totam aut repellat,
+                inventore earum asperiores. Cum, eum! Expedita praesentium,
+                aliquid aliquam quos voluptate velit doloribus provident voluptas,
+                perferendis ea veniam.
+              </p>
           </div>
         </div>
+      </div>
         <h1 class="title-education">Éducation</h1>
         <div class="educ_canontainer">
           <div class="ed-1">
