--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-        <h1 id="title-ed" class="title-education">Éducation</h1>
+        <h1 id="title_ed" class="title-education">Éducation</h1>
         <div class="educ_canontainer">
           <div class="ed-1">
             <h2>HighSchool</h2>
