--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>My-Cv</title>
   </head>
   <header>
-    <div class="shadow_header"></div>
     <div class="header-container">
       <div class="header-sub-container">
         <!-- <div class="container-name">
@@ -19,6 +18,8 @@
           <div class="nav-experience"><a href="#title_ex">&ltExperience</a></div>
           <div class="nav-skills"><a href="#title_sk">&ltSkills</a></div>
           <div class="nav-speak"><a href="#title_lu">&ltLunguages</a> </div>
+          <div class="nav-contact"><a href="#title_contact">&ltContact</a></div>
+          <img class="only-gsm" src="./asset/menu_24dp_FILL0_wght400_GRAD0_opsz24.svg"></img>
         </div>
       </div>
   </div>
@@ -97,6 +98,7 @@
         </div>
         <h1 id="title_ex"  class="title_expe">&ltExperience</h1>
         <div class="expe_container">
+          <div class="ex-2"><h3>&ltSummer 2018</h3></div>
           <div class="ex-1"><h2>&ltColruyt Jodoigne</h2><p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
             fugiat eum libero, esse alias harum veritatis, tempora nihil
@@ -104,7 +106,7 @@
             quis officiis eveniet! Non earum, eligendi architecto natus
             mollitia?
           </p></div>
-          <div class="ex-2"><h3>&ltSummer 2018</h3></div>
+          
           <div class="ex-3"><h3>Summer 2021&gt</h3></div>
           <div class="ex-4"><h2>&ltCentre de vaccination</h2><p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
@@ -113,6 +115,7 @@
             quis officiis eveniet! Non earum, eligendi architecto natus
             mollitia?
           </p></div>
+          <div class="ex-6"><h3>&lt Nov-Junary 2022-23</h3></div>
           <div class="ex-5"><h2>&ltInternship Tramway21</h2><p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum
             fugiat eum libero, esse alias harum veritatis, tempora nihil
@@ -120,7 +123,6 @@
             quis officiis eveniet! Non earum, eligendi architecto natus
             mollitia?
           </p></div>
-          <div class="ex-6"><h3>&lt Nov-Junary 2022-23</h3></div>
         </div>
         
         <h1 id="title_sk" class="title_skils">&ltSkills</h1>
@@ -157,12 +159,16 @@
     </div>
   </body>
   <footer>
-    <hr/>
-    <div class="link">
-      <div class="link_container">
-        <a href="https://github.com/Lumar-ux" target="_blank">&ltGitHub</a>
-        <a href="https://www.codewars.com/users/Lumar" target="_blank">&ltCodeWars</a>
-        <a href="https://www.linkedin.com/in/lucasmaroy/" target="_blank">&ltLinkedin</a>
+    <div class="link_container">
+      <div class="link_sub_container">
+        <h1 id="title_contact">&ltContact</h1>
+        <div class="link">
+          <a href="tel:">+32 470 40 44 04</a>
+          <a href="mailto:">email@gmail.com</a> 
+          <a href="https://github.com/Lumar-ux" target="_blank">&ltGitHub</a>
+          <a href="https://www.codewars.com/users/Lumar" target="_blank">&ltCodeWars</a>
+          <a href="https://www.linkedin.com/in/lucasmaroy/" target="_blank">&ltLinkedin</a>
+        </div>
       </div>
     </div>
   </footer>
